--- a/nodeApp/package.json
+++ b/nodeApp/package.json
@@ -21,5 +21,8 @@
     "request": "^2.74.0",
     "request-promise": "^4.1.1",
     "winston": "^2.2.0"
+  },
+  "engines":{
+    "node":"6.7.0"
   }
 }
