--- a/nodeApp/package.json
+++ b/nodeApp/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp serve"
+    "start": "node -v"
   },
   "author": "Benjamin Guilloteau",
   "license": "ISC",
@@ -24,6 +24,6 @@
     "winston": "^2.2.0"
   },
   "engines":{
-    "node":"6.9.0"
+    "node":"6.7.0"
   }
 }
