--- a/package.json
+++ b/package.json
@@ -4,13 +4,36 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
+    "angular": "^1.5.8",
+    "angular-mocks": "^1.5.8",
+    "angular-route": "^1.5.8",
+    "angular-ui-bootstrap": "^2.2.0",
+    "body-parser": "^1.15.2",
+    "bootstrap": "^3.3.7",
     "browserify": "^13.1.0",
+    "errorhandler": "^1.4.3",
+    "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
+    "gulp-karma": "0.0.5",
     "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.2.2",
+    "ibm-blockchain-js": "^1.2.8",
+    "jasmine": "^2.5.2",
+    "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
-    "vinyl-source-stream": "^1.1.0"
+    "karma-angular": "0.0.6",
+    "karma-browserify": "^5.1.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "morgan": "^1.7.0",
+    "oclazyload": "^1.0.9",
+    "path": "^0.12.7",
+    "request": "^2.75.0",
+    "request-promise": "^4.1.1",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0",
+    "winston": "^2.2.0"
   },
   "devDependencies": {},
   "scripts": {
