--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp serve"
+    "start": "gulp deploy"
   },
   "engines":{
     "node": "6.7.0",
