--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "apps",
   "version": "1.0.0",
   "description": "",
-  "main": "gulpfile.js",
+  "scripts": {
+    "server": "gulp serve",
+    "client": "gulp deploy"
+  },
   "dependencies": {
     "angular": "^1.5.8",
     "angular-mocks": "^1.5.8",
@@ -36,10 +39,6 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp deploy"
-  },
   "engines":{
     "node": "6.7.0",
     "npm": "3.10.3"
