--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
     "angular-mocks": "^1.5.8",
     "angular-route": "^1.5.8",
     "angular-ui-bootstrap": "^2.2.0",
+    "backbone": "^1.3.3",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "browserify": "^13.1.0",
     "errorhandler": "^1.4.3",
     "express": "^4.14.0",
+    "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
     "gulp-karma": "0.0.5",
     "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.2.2",
-    "ibm-blockchain-js": "^1.2.8",
+    "ibm-blockchain-js": "^1.3.0",
     "jasmine": "^2.5.2",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
@@ -32,6 +34,7 @@
     "morgan": "^1.7.0",
     "oclazyload": "^1.0.9",
     "path": "^0.12.7",
+    "q": "^1.4.1",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
     "vinyl-source-stream": "^1.1.0",
@@ -39,7 +42,7 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {},
-  "engines":{
+  "engines": {
     "node": "6.7.0",
     "npm": "3.10.3"
   },
