--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-karma": "0.0.5",
     "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.2.2",
+    "hfc": "^0.6.5",
     "ibm-blockchain-js": "^1.3.0",
     "jasmine": "^2.5.2",
     "jasmine-core": "^2.5.2",
@@ -37,6 +38,7 @@
     "q": "^1.4.1",
     "request": "^2.75.0",
     "request-promise": "^4.1.1",
+    "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0",
     "winston": "^2.2.0"
