add environment variable test

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-environment": "^1.0.4",
     "angular-mocks": "^1.5.8",
     "angular-route": "^1.5.8",
     "angular-ui-bootstrap": "^2.2.0",
