--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ server/#node.log#
 server/.idea/
 server/.node.log.swp
 server/node.log
+server/app-sdk.js
+server/util/util-sdk.js
+server/0.secure.blockchain.ibm.com.cert
+server/us.blockchain.ibm.com.cert
